fix: Search bar scrollbar visible #6

--- a/Compy.theme.css
+++ b/Compy.theme.css
@@ -2,11 +2,7 @@
  * @name Compy
  * @author NotAddison
  * @authorLink https://github.com/NotAddison
-<<<<<<< HEAD
- * @version 1.1.2
-=======
- * @version 1.1.1
->>>>>>> cdb07e1095723e061be4ec9c45b4f26d0703cdb4
+ * @version 1.1.3
  * @description A Compact Discord Theme. | Dark theme is required!
  * @source https://github.com/NotAddison/Compy
  * @website https://notaddison.github.io/Portfolio/
@@ -263,7 +259,11 @@
 
 /* --- Search Bar --- */
 #search-results {
-    width: 320px !important
+    width: 320px !important;
+}
+
+.search-2Mwzzq .DraftEditor-root .public-DraftEditor-content {
+    overflow-x:hidden;
 }
 
 .searchResultsWrap-5RVOkx #search-results {
